# automata

./: .env  .gitignore  Cargo.toml  README.md  log.md  scratch.ipynb
.cargo/: config.toml
automata/: Cargo.toml  README.md  bundler.toml
automata/src/: editor.rs  lib.rs
piston_gol/: Cargo.toml
piston_gol/src/: main.rs
playground/: Cargo.toml  README.md
playground/src/: functions.rs  keyboard_functions.rs  main.rs  patterns.rs
scratch/: scratch.ipynb
src/: consts.rs  editor.rs  gol.rs  gol_utils.rs  lib.rs  main.rs
