[package]
name = "automata"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Thomas <andrew.r.j.thomas@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://andrewrthomas.com"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = {git = "https://github.com/robbert-vdh/nih-plug.git"}
rand = "0.8.5"
realfft = "3.3.0"
rtrb = "0.3.0"

# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
